--- a/_includes/animated-background.html
+++ b/_includes/animated-background.html
@@ -1,4 +1,4 @@
-<div id="animation">
+<!-- <div id="animation">
     <div class="animation-circle"></div>
     <div class="animation-circle"></div>
     <div class="animation-circle"></div>
@@ -49,4 +49,4 @@
     <div class="animation-circle"></div>
     <div class="animation-circle"></div>
     <div class="animation-circle"></div>
-  </div>
+  </div> -->
