--- a/_includes/latex.html
+++ b/_includes/latex.html
@@ -6,8 +6,8 @@ MathJax.Hub.Config({
         }
     },
     tex2jax: {
-        inlineMath: [ ['$','$'] ],
-        displayMath: [ ['$$','$$'] ],
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
+        inlineMath: [['$','$'], ['\\(','\\)']],
         processEscapes: true,
     }
 });
